syntax = "proto3";

package email.service.users;

import "google/protobuf/empty.proto";
import "models.proto";

option java_multiple_files = true;
option java_package        = "com.seeYaa.proto.email.service.users";
option java_outer_classname = "UsersServiceProto";

message SignUpRequest {
  string email     = 1;
  string password  = 2;
  string firstname = 3;
  string lastname  = 4;
  string username  = 5;
}

message EditProfileRequest {
  string firstname = 1;
  string lastname  = 2;
  string username  = 3;
  string password  = 4;
}

message UserWithLetters {
  repeated email.models.Letter inbox   = 1;
  repeated email.models.Letter sent    = 2;
}

message SignInRequest {
  string credentialsBase64 = 1;
}

message SignInResponse {
  string email     = 1;
}

service UsersService {
  rpc SignUp                 (SignUpRequest)          returns (google.protobuf.Empty);
  rpc GetCurrentUser         (google.protobuf.Empty)  returns (email.models.Users);
  rpc GetCurrentUserExtended (google.protobuf.Empty)  returns (UserWithLetters);
  rpc EditProfile            (EditProfileRequest)     returns (google.protobuf.Empty);
  rpc Authentication         (SignInRequest)          returns (SignInResponse);
}